--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body{
     font-size: 15px;
     box-shadow: 0 5px 5px rgba(0,0,0,0.2);
 }
-.option{
+.dropdown .option{
     width: 100%;
     height: auto;
     background: #fff;
@@ -40,6 +40,11 @@ body{
     overflow: hidden;
     visibility: hidden;
     opacity: 0;
+}
+.dropdown.active .option{
+ visibility: visible;
+ opacity: 1;
+ transition: 0.2s;
 }
 .option div{
     padding: 15px 20px;
