--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body{
 .dropdown{
     width: 300px;
     height: 50px;
-
+    position: relative;
 }
 .dropdown input{
     width: 100%;
@@ -53,4 +53,26 @@ body{
 .option div:hover{
     background: darkcyan;
     color: #fff;
+}
+.dropdown::before{
+    content: '';
+    position: absolute;
+    width: 12px;
+    height: 2px;
+    background: #555;
+    left: 12px;
+    top: 25px;
+    z-index: 10;
+    transform: rotate(40deg);
+}
+.dropdown::after{
+    content: '';
+    position: absolute;
+    width: 12px;
+    height: 2px;
+    background: #555;
+    left: 20px;
+    top: 25px;
+    z-index: 10;
+    transform: rotate(-40deg);
 }
